--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <title>Responsive navigation bar</title>
@@ -9,125 +8,76 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <div class="logo">
-        <img src="logo.png" />
-      </div>
-      <div class="icon">
-        <span class="toggle">☰</span>
-      </div>
-      <ul class="list-item">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">About us</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <div class="main-content">
-    <div class="content-left">
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 1">
-        <div class="content-info">
-          <h2>Konten 1</h2>
-          <p>Deskripsi Konten 1</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 2">
-        <div class="content-info">
-          <h2>Konten 2</h2>
-          <p>Deskripsi Konten 2</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 3">
-        <div class="content-info">
-          <h2>Konten 3</h2>
-          <p>Deskripsi Konten 3</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 4">
-        <div class="content-info">
-          <h2>Konten 4</h2>
-          <p>Deskripsi Konten 4</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 5">
-        <div class="content-info">
-          <h2>Konten 5</h2>
-          <p>Deskripsi Konten 5</p>
-        </div>
-      </div>
+<header>
+  <nav>
+    <div class="nav-logo">Logo</div>
+    <div class="nav-menu">
+      <a class="nav-menu-item" href="#">Company</a>
+      <a class="nav-menu-item" href="#">Blog</a>
+      <a class="nav-menu-item" href="#">Contact</a>
     </div>
-
-    <div class="content-right">
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 6">
-        <div class="content-info">
-          <h2>Konten 6</h2>
-          <p>Deskripsi Konten 6</p>
-        </div>
+    <button class="hamburger-menu">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>
+  </nav>
+</header>
+<body>
+<main>
+  <br></br>
+  <div class="featured-blogpost">
+    <div class="blogpost">
+      <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Blogpost 1">
+      <h2>Featured Blogpost Title</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="blogpost-list">
+      <div class="blogpost">
+        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Blogpost 2">
+        <h3>Blogpost Title 2</h3>
       </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 7">
-        <div class="content-info">
-          <h2>Konten 7</h2>
-          <p>Deskripsi Konten 7</p>
-        </div>
+      <div class="blogpost">
+        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Blogpost 3">
+        <h3>Blogpost Title 3</h3>
       </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 8">
-        <div class="content-info">
-          <h2>Konten 8</h2>
-          <p>Deskripsi Konten 8</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 9">
-        <div class="content-info">
-          <h2>Konten 9</h2>
-          <p>Deskripsi Konten 9</p>
-        </div>
-      </div>
-
-      <div class="content-item">
-        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Image 10">
-        <div class="content-info">
-          <h2>Konten 10</h2>
-          <p>Deskripsi Konten 10</p>
-        </div>
+      <div class="blogpost">
+        <img src="https://www.golali.com/uploads/images/image_750x_5ea9536e45fe1.jpg" alt="Blogpost 4">
+        <h3>Blogpost Title 4</h3>
       </div>
     </div>
   </div>
 
-  <ul class="pagination">
-    <li><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-    <!-- Tambahkan tautan halaman lainnya sesuai kebutuhan -->
-  </ul>
-
-  <footer>
-    <p>&copy; 2023 Your Website. All rights reserved.</p>
-  </footer>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <nav class="pagination">
+    <ul>
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+    </ul>
+  </nav>
+</main>
 </body>
-
-</html>
+<footer>
+  <div class="footer-content">
+    <div class="footer-section">
+      <h3>About Us</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo condimentum mi nec volutpat.</p>
+    </div>
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <p>Email: info@example.com</p>
+      <p>Phone: 123-456-7890</p>
+    </div>
+    <div class="footer-section">
+      <h3>Follow Us</h3>
+      <ul class="social-media">
+        <li><a href="#" class="facebook-icon">Facebook</a></li>
+        <li><a href="#" class="twitter-icon">Twitter</a></li>
+        <li><a href="#" class="instagram-icon">Instagram</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2023 Your Website. All rights reserved.</p>
+  </div>
+</footer>
